--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
+    <h2>You have successfully created a pipeline that retrieved this source application from github  and  deployed it one an Amazon EC2 instance using AWS Elastic Beanstalk. You're one step closer to practicing continous deployment bucket and deployed it!.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
